fix size rollback

--- a/index.html
+++ b/index.html
@@ -1,18 +1,1 @@
-<html>
-
-<head>
-    <style>
-        body {
-            background-image: url('https://cswesteurope1003bffda3ce.blob.core.windows.net/images/lockscreen.jpg');
-            background-size: cover;
-        }
-    </style>
-</head>
-
-<body>
-    <p><b>
-            <font size="400" color="blue">Created with the power of Siri and Bicep!</font>
-        </b></p>
-</body>
-
-</html>
+<html><head><style> body {background-image: url('https://cswesteurope1003bffda3ce.blob.core.windows.net/images/lockscreen.jpg');}</style></head><body><p><b><font size="400" color="blue">Created with the power of Siri and Bicep!</font></b></p></body></html>
