--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         body {
             background-image: url('https://cswesteurope1003bffda3ce.blob.core.windows.net/images/lockscreen.jpg');
             background-size: cover;
+	    background-repeat: no-repeat;
+  	    background-attachment: fixed;
         }
     </style>
 </head>
